{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 42,
  "lineage": "a9d971c1-d33e-c487-1b3c-b9363c45969c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432cc4d43383a205",
            "arn": "arn:aws:ec2:eu-north-1:130358282275:elastic-ip/eipalloc-0432cc4d43383a205",
            "association_id": "eipassoc-07f1836576d9294ed",
            "domain": "vpc",
            "id": "eipalloc-0432cc4d43383a205",
            "instance": "i-0e322b6bdeb159cda",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-02c4bdd755423497f",
            "private_dns": "ip-10-0-1-140.eu-north-1.compute.internal",
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-13-61-218-130.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.218.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web_server",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4d7e98021b6b9a6",
            "arn": "arn:aws:ec2:eu-north-1:130358282275:instance/i-0e322b6bdeb159cda",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e322b6bdeb159cda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "first",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c4bdd755423497f",
            "private_dns": "ip-10-0-1-140.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-13-61-218-130.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.218.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6b6d97abe1744a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047d008e4ff019d31",
            "tags": {
              "Name": "edwin-project-ec2"
            },
            "tags_all": {
              "Name": "edwin-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058feece24f4164d5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4d7e98021b6b9a6",
            "arn": "arn:aws:ec2:eu-north-1:130358282275:instance/i-0b9294c49443c42b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "edwin-project-instance-profile",
            "id": "i-0b9294c49443c42b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "first",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe30b740faeb4779",
            "private_dns": "ip-10-0-1-209.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.209",
            "public_dns": "ec2-51-20-96-43.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.96.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008c0264b01e439fa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047d008e4ff019d31",
            "tags": {
              "Name": "edwin-project-ec2"
            },
            "tags_all": {
              "Name": "edwin-project-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058feece24f4164d5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:130358282275:internet-gateway/igw-0eca255da69e36405",
            "id": "igw-0eca255da69e36405",
            "owner_id": "130358282275",
            "tags": {
              "Name": "edwin-project-igw"
            },
            "tags_all": {
              "Name": "edwin-project-igw"
            },
            "vpc_id": "vpc-0c86525b5d92b8a66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:130358282275:route-table/rtb-0a1c07165660fd9a8",
            "id": "rtb-0a1c07165660fd9a8",
            "owner_id": "130358282275",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eca255da69e36405",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "edwin-project-public-rt"
            },
            "tags_all": {
              "Name": "edwin-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86525b5d92b8a66"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0750ff98839e33bd4",
            "route_table_id": "rtb-0a1c07165660fd9a8",
            "subnet_id": "subnet-047d008e4ff019d31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:130358282275:security-group/sg-058feece24f4164d5",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058feece24f4164d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "edwin-project-sg",
            "name_prefix": "",
            "owner_id": "130358282275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edwin-project-sg"
            },
            "tags_all": {
              "Name": "edwin-project-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c86525b5d92b8a66"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:130358282275:subnet/subnet-047d008e4ff019d31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047d008e4ff019d31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130358282275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edwin-project-public-subnet"
            },
            "tags_all": {
              "Name": "edwin-project-public-subnet"
            },
            "vpc_id": "vpc-0c86525b5d92b8a66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:130358282275:vpc/vpc-0c86525b5d92b8a66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ceff12da4ae47d4c",
            "default_route_table_id": "rtb-07b652f26cbb75a1c",
            "default_security_group_id": "sg-0cf249f8449c8f4cf",
            "dhcp_options_id": "dopt-00258930058f3f75e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c86525b5d92b8a66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b652f26cbb75a1c",
            "owner_id": "130358282275",
            "tags": {
              "Name": "edwin-project-vpc"
            },
            "tags_all": {
              "Name": "edwin-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}